# Fashion-SegCBIR

./: .env  .gitignore  README.md  app.py  predictions_all.json  pyproject.toml  requirements.txt  summary.json  test.py
data/: .gitignore
evaluation/: run_eval.py  run_predict.py
logs/: cbir_metrics_summary.json  predictions_all.json
src/model/: cross_encoder_model.py
src/node/: image_encoder.py  refine_query_image.py  rerank.py
src/static/: main.html
src/utils/: config.py  load_image.py  load_metadata.py  load_models.py
vector_database/: dress.npz  hat.npz  longsleeve.npz  outwear.npz  pants.npz  shirt.npz  shoes.npz  shorts.npz  skirt.npz  t-shirt.npz
